cdk.out/LocalStack.template.json
{
 "Resources": {
  "PatientXVpc8FD542DA": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PatientXVpc"
     }
    ]
   }
  },
  "PatientXVpcPublicSubnet1Subnet45BFF14B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "LocalStack/PatientXVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientXVpc8FD542DA"
    }
   }
  },
  "PatientXVpcPublicSubnet1RouteTable6901B41B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientXVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientXVpc8FD542DA"
    }
   }
  },
  "PatientXVpcPublicSubnet1RouteTableAssociation19588A50": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientXVpcPublicSubnet1RouteTable6901B41B"
    },
    "SubnetId": {
     "Ref": "PatientXVpcPublicSubnet1Subnet45BFF14B"
    }
   }
  },
  "PatientXVpcPublicSubnet1DefaultRouteD47C23E8": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientXVpcIGWFD6730DB"
    },
    "RouteTableId": {
     "Ref": "PatientXVpcPublicSubnet1RouteTable6901B41B"
    }
   },
   "DependsOn": [
    "PatientXVpcVPCGW3E700326"
   ]
  },
  "PatientXVpcPublicSubnet1EIP492C64FF": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientXVpc/PublicSubnet1"
     }
    ]
   }
  },
  "PatientXVpcPublicSubnet1NATGatewayF01BEAA7": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientXVpcPublicSubnet1EIP492C64FF",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientXVpcPublicSubnet1Subnet45BFF14B"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientXVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "PatientXVpcPublicSubnet1DefaultRouteD47C23E8",
    "PatientXVpcPublicSubnet1RouteTableAssociation19588A50"
   ]
  },
  "PatientXVpcPublicSubnet2SubnetD32B1A6E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "LocalStack/PatientXVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientXVpc8FD542DA"
    }
   }
  },
  "PatientXVpcPublicSubnet2RouteTable7764091E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientXVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientXVpc8FD542DA"
    }
   }
  },
  "PatientXVpcPublicSubnet2RouteTableAssociation9ED2DCE2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientXVpcPublicSubnet2RouteTable7764091E"
    },
    "SubnetId": {
     "Ref": "PatientXVpcPublicSubnet2SubnetD32B1A6E"
    }
   }
  },
  "PatientXVpcPublicSubnet2DefaultRouteFA3751FA": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientXVpcIGWFD6730DB"
    },
    "RouteTableId": {
     "Ref": "PatientXVpcPublicSubnet2RouteTable7764091E"
    }
   },
   "DependsOn": [
    "PatientXVpcVPCGW3E700326"
   ]
  },
  "PatientXVpcPublicSubnet2EIPA365667B": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientXVpc/PublicSubnet2"
     }
    ]
   }
  },
  "PatientXVpcPublicSubnet2NATGateway9E013761": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientXVpcPublicSubnet2EIPA365667B",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientXVpcPublicSubnet2SubnetD32B1A6E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientXVpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "PatientXVpcPublicSubnet2DefaultRouteFA3751FA",
    "PatientXVpcPublicSubnet2RouteTableAssociation9ED2DCE2"
   ]
  },
  "PatientXVpcPrivateSubnet1Subnet97A808B2": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "LocalStack/PatientXVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientXVpc8FD542DA"
    }
   }
  },
  "PatientXVpcPrivateSubnet1RouteTable7EDDB245": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientXVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientXVpc8FD542DA"
    }
   }
  },
  "PatientXVpcPrivateSubnet1RouteTableAssociation3ABF5330": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientXVpcPrivateSubnet1RouteTable7EDDB245"
    },
    "SubnetId": {
     "Ref": "PatientXVpcPrivateSubnet1Subnet97A808B2"
    }
   }
  },
  "PatientXVpcPrivateSubnet1DefaultRouteDCC22DA8": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientXVpcPublicSubnet1NATGatewayF01BEAA7"
    },
    "RouteTableId": {
     "Ref": "PatientXVpcPrivateSubnet1RouteTable7EDDB245"
    }
   }
  },
  "PatientXVpcPrivateSubnet2Subnet477BEA54": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "LocalStack/PatientXVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientXVpc8FD542DA"
    }
   }
  },
  "PatientXVpcPrivateSubnet2RouteTable0FF98924": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientXVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientXVpc8FD542DA"
    }
   }
  },
  "PatientXVpcPrivateSubnet2RouteTableAssociationBC6020DA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientXVpcPrivateSubnet2RouteTable0FF98924"
    },
    "SubnetId": {
     "Ref": "PatientXVpcPrivateSubnet2Subnet477BEA54"
    }
   }
  },
  "PatientXVpcPrivateSubnet2DefaultRouteC329A060": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientXVpcPublicSubnet2NATGateway9E013761"
    },
    "RouteTableId": {
     "Ref": "PatientXVpcPrivateSubnet2RouteTable0FF98924"
    }
   }
  },
  "PatientXVpcIGWFD6730DB": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PatientXVpc"
     }
    ]
   }
  },
  "PatientXVpcVPCGW3E700326": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "PatientXVpcIGWFD6730DB"
    },
    "VpcId": {
     "Ref": "PatientXVpc8FD542DA"
    }
   }
  },
  "AuthServiceDBSubnetGroupCFE5A552": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for AuthServiceDB database",
    "SubnetIds": [
     {
      "Ref": "PatientXVpcPrivateSubnet1Subnet97A808B2"
     },
     {
      "Ref": "PatientXVpcPrivateSubnet2Subnet477BEA54"
     }
    ]
   }
  },
  "AuthServiceDBSecurityGroupBE6D28EB": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for AuthServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientXVpc8FD542DA"
    }
   }
  },
  "LocalStackAuthServiceDBSecret0F3CB76B3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDBSecretAttachmentF30406A9": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "LocalStackAuthServiceDBSecret0F3CB76B3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "AuthServiceDBC6B688BA"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "AuthServiceDBC6B688BA": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "auth-service-db",
    "DBSubnetGroupName": {
     "Ref": "AuthServiceDBSubnetGroupCFE5A552"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "LocalStackAuthServiceDBSecret0F3CB76B3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "AuthServiceDBSecurityGroupBE6D28EB",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PatientServiceDBSubnetGroupCED49D16": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for PatientServiceDB database",
    "SubnetIds": [
     {
      "Ref": "PatientXVpcPrivateSubnet1Subnet97A808B2"
     },
     {
      "Ref": "PatientXVpcPrivateSubnet2Subnet477BEA54"
     }
    ]
   }
  },
  "PatientServiceDBSecurityGroup6B97C0E5": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for PatientServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientXVpc8FD542DA"
    }
   }
  },
  "LocalStackPatientServiceDBSecretB97925CC3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PatientServiceDBSecretAttachment90D77B03": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "LocalStackPatientServiceDBSecretB97925CC3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "PatientServiceDBB84F9BF9"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "PatientServiceDBB84F9BF9": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "patient-service-db",
    "DBSubnetGroupName": {
     "Ref": "PatientServiceDBSubnetGroupCED49D16"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "LocalStackPatientServiceDBSecretB97925CC3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "PatientServiceDBSecurityGroup6B97C0E5",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "AuthServiceDBC6B688BA",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "AuthServiceDBC6B688BA",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "PatientDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "PatientServiceDBB84F9BF9",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "PatientServiceDBB84F9BF9",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "MskCluster": {
   "Type": "AWS::MSK::Cluster",
   "Properties": {
    "BrokerNodeGroupInfo": {
     "BrokerAZDistribution": "DEFAULT",
     "ClientSubnets": [
      {
       "Ref": "PatientXVpcPrivateSubnet1Subnet97A808B2"
      },
      {
       "Ref": "PatientXVpcPrivateSubnet2Subnet477BEA54"
      }
     ],
     "InstanceType": "kafka.m5.xlarge"
    },
    "ClusterName": "kafka-cluster",
    "KafkaVersion": "2.8.0",
    "NumberOfBrokerNodes": 1
   }
  },
  "PatientXClusterB58D7092": {
   "Type": "AWS::ECS::Cluster"
  },
  "PatientXClusterDefaultServiceDiscoveryNamespace13815213": {
   "Type": "AWS::ServiceDiscovery::PrivateDnsNamespace",
   "Properties": {
    "Name": "patient-x.local",
    "Vpc": {
     "Ref": "PatientXVpc8FD542DA"
    }
   }
  }
 }
}
